--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Trivy image scan
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${ IMAGE_NAME }:latest
+        image-ref: ${{ env.IMAGE_NAME }}:latest
         scan-type: image
         format: table
 
