--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: tictactoe
-          image: poojatalele/tictactoe:latest
+          image: poojatalele/tic_tac_toe:latest
           stdin: true
           tty: true
